# ChemicalInventory

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
static/js/: common.js  scan.js  utils.js
templates/: base.html  campaign.html  campaign_history.html  config.html  database.html  error.html  index.html  status.html  upload_campaign.html  upload_inventory.html  view_campaign.html
