[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ChemicalInventory"
version = "1.0.0"
description = "A Flask-based chemical inventory reconciliation system with barcode scanning, tracking, and reporting."
authors = [
    { name = "Tyler Martin", email = "tyler.martin@nist.gov" }
]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "flask>=2.1.0",
    "pandas>=2.0.0",
    "numpy>=1.23.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.0.0",
    "tabulator>=1.53.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.setuptools]
packages = ["chemicalinventory"]
